--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta1",
     "ckeditor5-build-classic": "^1.0.0",
+    "formik": "^2.2.6",
     "html-react-parser": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-images-uploading": "^3.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -25,7 +27,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
