--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
 	"private": true,
 	"dependencies": {
 		"@artsy/fresnel": "^1.3.1",
-		"@testing-library/jest-dom": "^5.11.8",
-		"@testing-library/react": "^11.2.3",
-		"@testing-library/user-event": "^12.6.0",
 		"axios": "^0.21.1",
 		"bootstrap": "^5.0.0-beta1",
-		"formik": "^2.2.6",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
 		"react-bootstrap": "^1.4.3",
@@ -20,11 +16,8 @@
 		"react-scripts": "4.0.1",
 		"redux": "^4.0.5",
 		"redux-saga": "^1.1.3",
-		"redux-thunk": "^2.3.0",
 		"semantic-ui-css": "^2.4.1",
-		"semantic-ui-react": "^2.0.3",
-		"web-vitals": "^0.2.4",
-		"yup": "^0.32.9"
+		"semantic-ui-react": "^2.0.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
